// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accent button example 1`] = `
"<b-button color=\\"accent\\">
    <button>
        <slot>Accent button</slot>
    </button>
</b-button>"
`;

exports[`Primary button example 1`] = `
"<b-button color=\\"primary\\">
    <button>
        <slot>Primary</slot>
    </button>
</b-button>"
`;

exports[`Primary flat button example 1`] = `
"<b-button flat=\\"\\" color=\\"primary\\">
    <button>
        <slot>Primary flat</slot>
    </button>
</b-button>"
`;
